[package]
name = "contract-version"
version = "0.0.1"
authors = ["Thiago Machado <thiago@chikai.io>"]
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = {version = "4.0.0-pre.8", features = ["unstable"]}
rustc_version = "0.4.0"
indexmap = "1.8.2"

[patch.crates-io.near-sdk]
git = "https://github.com/Seatlab-dev/Forked-Near-Rust-Sdk.git"
rev = "a511581"

[patch.crates-io.schemars]
git = "https://github.com/Seatlab-dev/schemars.git"
rev = "57ffb49"